--- a/index.css
+++ b/index.css
@@ -1,9 +1,321 @@
-body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: Helvetica;
+.title {
+  font-size: 250%;
 }
-.title{
-    font-size: 46px;
+
+a {
+  text-decoration: none;
+}
+
+body {
+  padding: 0;
+  font-size: 100%;
+  font: inherit;
+  font-family: "Helvetica";
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+#menu ul {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: black;
+  width: 1000px;
+  height: 50px;
+  border-radius: 40%;
+  box-shadow: 10px 4px 7px 0px rgba(56, 64, 71, 0.9);
+}
+
+#menu li {
+  display: block;
+  float: left;
+  padding: 0.5rem;
+  position: relative;
+  text-decoration: none;
+  left: 27%;
+  border-radius: 0%;
+}
+
+#menu li a {
+  color: #fff;
+  left: 0%;
+  font-size: 1.5rem;
+  padding: 30px;
+}
+
+#menu li:hover {
+  background: rgb(30, 30, 30);
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 40%;
+}
+
+#menu ul li ul {
+  border-radius: 10%;
+  background: black;
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  margin-top: 3.3rem;
+  display: none;
+  width: 160%;
+  height: 200%;
+  padding: 0px;
+  font-weight: normal;
+  text-align: center;
+}
+
+#menu ul li:hover > ul,
+ul li ul:hover {
+  visibility: visible;
+  opacity: 1;
+  display: block;
+}
+
+#menu ul li ul li {
+  clear: both;
+  width: 95%;
+  left: 0%;
+}
+
+.column {
+  margin-left: 4%;
+  margin-right: 4%;
+  float: left;
+  width: 42%;
+  padding-bottom: 4%;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+@media screen and (min-width: 1100px) {
+  #menu {
+    display: block;
+  }
+  #hamburger {
+    visibility: hidden;
+  }
+  .margin1 {
+    margin-left: 25%;
+    width: 490px;
+  }
+
+  .margin2 {
+    margin-left: 45%;
+    width: 420px;
+  }
+  #link {
+    height: 15px;
+    padding: 20px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  #menu {
+    display: none;
+  }
+  #hamburger {
+    visibility: visible;
+  }
+  .title {
+    font-size: 200%;
+  }
+  body {
+    font-size: 80%;
+  }
+  .margin1 {
+    margin-left: 5%;
+    text-align: center;
+  }
+
+  .margin2 {
+    padding-bottom: 10px;
+    margin-left: 5%;
+    text-align: center;
+  }
+
+  #link {
+    height: 17px;
+    padding: 25px;
+  }
+
+  .column {
+    width: 100%;
+  }
+}
+
+#hamburger {
+  display: block;
+  position: fixed;
+  top: 80px;
+  left: 50px;
+
+  z-index: 1;
+
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#hamburger input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+
+  cursor: pointer;
+
+  opacity: 0;
+  z-index: 2;
+
+  -webkit-touch-callout: none;
+}
+
+#hamburger span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+
+  background: black;
+  border-radius: 3px;
+
+  z-index: 1;
+
+  transform-origin: 4px 0px;
+
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    opacity 0.55s ease;
+}
+
+#hamburger span:first-child {
+  transform-origin: 0% 0%;
+}
+
+#hamburger span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+#hamburger input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: white;
+}
+
+#hamburger input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#hamburger input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+#hamburgerMenu {
+  position: absolute;
+  width: 230px;
+  margin: -50px 0 0 -30px;
+  padding: 50px;
+  padding-top: 60px;
+
+  background: black;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+
+  border-radius: 10%;
+}
+
+#hamburgerMenu li {
+  padding: 10px 0;
+  font-size: 22px;
+  color: white;
+}
+
+#hamburgerMenu li a {
+  color: white;
+}
+
+#hamburger input:checked ~ ul {
+  transform: none;
+}
+
+.onclick-menu:focus {
+  pointer-events: none;
+}
+
+.onclick-menu:focus .onclick-menu-content {
+  opacity: 1;
+  visibility: visible;
+  display: inherit;
+  pointer-events: auto;
+}
+
+.onclick-menu-content {
+  display: none;
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0.5s;
+}
+.onclick-menu-content li {
+  list-style: none;
+}
+
+.rounded-corners {
+  border-radius: 0% 40% 0% 40%;
+}
+.centered {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.right-padding {
+  padding-right: 550px;
+}
+
+.left-padding {
+  padding-left: 450px;
+}
+/* 
+.left-padding2 {
+  padding-left: 17%;
+}
+
+.right-padding2 {
+  padding-right: 17%;
+} */
+
+ul {
+  list-style-type: "\2713   ";
+}
+
+#link {
+  background: black;
+  border-radius: 40%;
+  box-shadow: 10px 4px 7px 0px rgba(56, 64, 71, 0.9);
+  font-size: 1rem;
+}
+
+#link a {
+  color: #fff;
+}
+
+#link a:hover {
+  font-weight: bold;
+  cursor: pointer;
 }
