changing responsiveness on VBA project links

--- a/index.css
+++ b/index.css
@@ -136,14 +136,16 @@ ul li ul:hover {
   }
 
   .margin2 {
-    padding-bottom: 10px;
-    margin-left: 5%;
+    margin-left: 25%;
     text-align: center;
   }
 
   #link {
     height: 17px;
-    padding: 25px;
+    padding-bottom: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 12px;
   }
 
   .column {
@@ -318,4 +320,9 @@ ul {
 #link a:hover {
   font-weight: bold;
   cursor: pointer;
+}
+
+.intro {
+  margin-left: 4%;
+  margin-right: 4%;
 }
